<resources>
    <string name="app_name">My Pizza App</string>
    <string name="select_the_size">Select the size</string>
    <string name="pizza_small">Small</string>
    <string name="pizza_medium">Medium</string>
    <string name="pizza_large">Large</string>
    <string name="btn_add_toppings">ADD TOPPINGS</string>
    <string name="cheese_selection">Cheese</string>
    <string name="pepperoni_selection">Pepperoni</string>
    <string name="green_pepper_selection">Green Pepper</string>
    <string name="btn_complete_order">Complete Order</string>
    <string name="btn_new_pizza">New Pizza</string>
</resources>
