<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_toppings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nicholasdass.mypizzaapp.ToppingsActivity">

    <TextView
        android:id="@+id/txtSizeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:fontFamily="sans-serif" />

    <CheckBox
        android:id="@+id/chkCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheese_selection"
        />

    <CheckBox
        android:id="@+id/chkPepperoni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pepperoni_selection"
        />

    <CheckBox
        android:id="@+id/chkGreenPepper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green_pepper_selection"
        />

    <Button
        android:id="@+id/btnCompleteOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="completeOrder"
        android:text="@string/btn_complete_order"/>

</LinearLayout>
